# stream-companion

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run.py
.github/: copilot-instructions.md
app/: __init__.py  main.py
app/api/: __init__.py  dashboards.py  elements.py  media.py  serializers.py  websocket.py  widgets.py
app/core/: config.py  database.py  files.py  websocket.py
app/models/: __init__.py  base.py  dashboard.py  element.py  element_asset.py  media.py  widget.py
app/repositories/: __init__.py  element_repository.py  media_repository.py  widget_repository.py
app/schemas/: __init__.py  dashboard.py  element.py  media.py  widget.py
app/services/: __init__.py  behavior_service.py  element_service.py
app/widgets/: __init__.py  alert.py  base.py  confetti_alert.py  image_utils.py  position_helper.py
data/: stream_companion.db
docs/: 2025-12-07 card element  2025-12-13 confusion widget.md  2025-12-14 animation framework.md  2025-12-15 animation sequencer.md  2025-12-24 basewidget-property-validation.md  2025-12-24 positioning-implementation-guide.md  2025-12-24 relative-positioning-specification.md
docs/chats/: 2025-12-13 confusion widget.md  2025-12-24 alert-widget-update.md  2025-12-24 card-ff development status.md  2025-12-24 position renderding clarifications.md  friendlyfeud.md
frontend/admin/: index.html
frontend/admin/js/: app.js  components.js
frontend/overlay/: index.html  test-media-rendering.html
media/: overlay.html  test-media.html  test-overlay.html
media/admin/: index.html
tests/: test_positioning.py
(+5 files in other folders)
