[project]
name = "stream-companion"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.21.0",
    "fastapi>=0.121.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-socketio>=5.14.3",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
